welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: ')' expected but $XMLSTART$< found.
  while (i <num.length -1){
           ^island:17: error: illegal start of simple expression
}
^